# TodoAPI

./: .gitignore  Makefile  README.md  docker-compose.yml
.envs/.local/: .postgres
TodoAPI/: Dockerfile  conftest.py  pyproject.toml
TodoAPI/config/: api_router.py  urls.py
TodoAPI/config/settings/: base.py
TodoAPI/todos/: admin.py  models.py
TodoAPI/todos/api/: serializers.py  views.py
TodoAPI/todos/migrations/: 0001_initial.py
TodoAPI/todos/tests/api/: factories.py  test_views.py
TodoAPI/users/: authentication.py
TodoAPI/users/api/: serializers.py  views.py
TodoAPI/users/tests/api/: factories.py  test_authentication.py  test_views.py
