[project]
name = "todoapi"
version = "0.1.0"
description = ""
authors = [
    {name = "nghiahm",email = "honghia06@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django (>=5.1.6,<6.0.0)",
    "python-environ (>=0.4.54,<0.5.0)",
    "psycopg[binary] (>=3.2.4,<4.0.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "drf-spectacular (>=0.28.0,<0.29.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.test.dependencies]
pytest-django = "^4.10.0"
coverage = "^7.6.12"
django-coverage-plugin = "^3.1.0"
factory-boy = "^3.3.3"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--ds=config.settings.test --reuse-db --import-mode=importlib"
python_files = [
    "tests.py",
    "test_*.py",
]


[tool.coverage.run]
include = ["TodoAPI/**"]
omit = ["*/migrations/*", "*/tests/*"]
plugins = ["django_coverage_plugin"]
